sch-UID2-2470-add-roles-to-service-links edited tests to make more readable